src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");

*{
  scroll-behavior: smooth;
  margin: 0;
  box-sizing: border-box;
  /* overflow-x: hidden; */
}

body{
  /* display: flex; */
  /* justify-content: center; */
  max-width: 1650px;
  overflow-x: hidden;
  margin-left: auto;
  margin-right: auto;
  scroll-behavior: smooth;
  background-image: url('./assets/img/bg-pattern.jpg');
  background-repeat: repeat;
  background-size: 250px 250px;
  background-attachment: fixed;
  padding-right: 150px;
  padding-left: 150px;
  color: white;
}

/* NAVBAR STYLES */
.navbar{
  z-index: 100;
  width: auto;
  max-width: 1650px;
  overflow: hidden;
  margin-inline: auto;
  position: fixed;
  right: 0;
  left: 0;
  padding-right: 150px;
  padding-left: 150px;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.mobile-nav, .hamicon{
  display: none
}

.nav-transparent{
  background-color: transparent;
}
.nav-dark{
  background-color: black;
}
header.down{
  display: none;
}

.navlinks{
  list-style: none;
  display: flex;
}
a{
  text-decoration: none;
}
.navlinks a, .navlogin{
  color: white;
  margin-right: 10px;
  font-family: poppins, sans-serif;
  font-weight: 500;
  font-size: 16px;
}
.navlinks a:hover{
  color:#F4CE14;
}

.navlogin{
  color: #61d661;
  margin-right: 0;
  cursor: pointer;
}
.navlogin:hover{
  color: #00ff00;
}
.navlogin.signout{
  color: red;
}

#button{
  font-family: poppins, sans-serif;
  cursor: pointer;
  border: none;
  width: 180px;
  min-height: 50px;
  background-color: #F4CE14;
  border-radius: 10px;
  font-size: 18px;
  font-weight: 500;
}
#button:hover{
  background-color: #495E57;
  color: white;
}
.navLogo{
  width: 150px;
}
@media(max-width: 560px){
  .navLogo{
    width: 130px;
  }
}
@media(max-width: 420px){
  .navLogo{
    width: 100px;
  }
}

/* HERO STYLES */
.hero-section{
  display: flex;
  /* flex-shrink: 1; */
  /* height: 100vh; */
  background-image: url(./assets/img/bg-header.png);
  background-attachment: fixed;
  background-size: cover;
}

.hero-section, .about-section{
  margin-left: -150px;
  margin-right: -150px;
}

.hero-content{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-left: 150px;
  margin-right: 150px;
  font-family: poppins, sans-serif;
  padding-bottom: 80px;
  padding-top: 115px;
}
.heading{
  color: #F4CE14;
  margin: 0;
  font-size: 84px;
  font-weight: 700;
}
.sub-heading{
  line-height: 50%;
  margin: 0;
  font-size: 56px;
  font-weight: 400;
  /* margin-bottom: 80px; */
}
.heading-text{
  font-size: 24px;
  width: 500px;
  /* margin-bottom: 115px; */
}
@media(min-width: 1650px){
  .sub-heading{
    padding-bottom: 80px;
  }
  .heading-text{
    padding-bottom: 80px;
  }
}
@media(max-width: 1024px){
  .hero-content{
    padding-top: 80px;
  }
  .heading{
    font-size: 78px;
  }
  .heading-text{
    width: 400px;
  }
}
@media(max-width: 760px){
  .hero-content{
    padding-bottom: 60px;
  }
  .heading{
    font-size: 72px;
  }
  .sub-heading{
    font-size: 42px;
  }
  .heading-text{
    width: 60vw;
  }
}
@media(max-width: 560px){
  .hero-content{
    padding-bottom: 60px;
    padding-top: 70px;
  }
  .heading{
    font-size: 58px;
  }
  .sub-heading{
    font-size: 40px;
  }
  .heading-text{
    font-size: 20px;
    max-width: 65vw;
  }
}
@media(max-width: 480px){
  .heading{
    font-size: 42px;
  }
  .sub-heading{
    font-size: 32px;
  }
  .heading-text{
    /* width: 80vw; */
  }
}

/* SPECIALS STYLES */
.specials-section{
  background-color: black;
  margin-left: -150px;
  margin-right: -150px;
}
.specials-content{
  padding-top: 80px;
  padding-bottom: 130px;
  margin-left: 150px;
  margin-right: 150px;
}
.specials-heading{
  margin-bottom: 80px;
  display: flex;
  justify-content: space-between;
  /* align-items: top; */
}
.specials-heading h3{
  font-family: poppins, sans-serif;
  font-weight: 500;
  font-size: 30px;
}
.card-container{
  padding: 0;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  /* overflow: hidden; */
}
.smobile-btn{
  display: none;
}

/* SPECIALS CARD STYLES */
.card{
  position: relative;
  height: 450px;
  max-width: 300px;
  border-radius: 16px;
  border: 1px solid rgba(255, 255, 255, 0.5);
  overflow: hidden;
  margin-bottom: 30px;
}
.cardImg-bx{
  height: 50%;
  /* border: 2px solid white; */
}
.cardImg{
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.card-details{
  padding: 10px 25px;
}
.card-heading{
  display: flex;
  justify-content: space-between;
}
.card-heading h4{
  font-family: poppins, sans-serif;
  font-size: 18px;
  font-weight: 500;
}
.price{
  color: #F4CE14;
}
.card-body{
  margin-top: 10px;
  font-weight: normal;
  font-size: 16px;
}
.meal-order{
  position: absolute;
  bottom: 10px;
}
.meal-order > p{
  font-family: poppins, sans-serif;
  font-size: 18px;
  font-weight: 500;
  color: #F4CE14;
  cursor: pointer;
}
.meal-order > p:hover{
  color: yellow;
}

@media(max-width: 640px){
  .specials-content{
    padding-bottom: 100px;
  }
  .card-container{
    justify-content: center;
  }
  .specials-heading button{
    display: none;
  }
  .smobile-btn{
    margin-top: 40px;
    display: block;
  }
}

/* TESTIMONIALS SECTION */
.testimonials-section{
  /* height: 100vh; */
}

/* ABOUT SECTION */
.about-section{
  background-color: rgb(27, 26, 26);
  /* height: 100vh; */
  padding-right: 150px;
  padding-left: 150px;
  padding-top: 80px;
  padding-bottom: 80px;
}

.about-content{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 60px;
  /* flex-direction: column; */
  flex-wrap: wrap;
}
.about-text{
  max-width: 600px;
  margin-right: 20px;
  min-width: 400px;
  flex: 1;
}
.aboutimg-container{
  display: flex;
  flex: 1;
  min-width: 400px;
  max-width: 600px;
}
/* ... */

